--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div class="send_message">
-        <input type="text" placeholder="Aa" />
+        <textarea name="message_area" placeholder="Aa" id="msg_area"></textarea>
         <button type="button" class="btn">&#5171;</button>
       </div>
     </div>
